model, serializer 修正
